# embdC_quaternions

./: .gitignore  CMakeLists.txt  GEMINI.md  PROJECT_PLAN.md  README.md  imu_config.txt  math_explanation.html
include/: embdC_quat.h  embdC_quat_fixed.h
sim/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  embdC_quat.c  embdC_quat_fixed.c
tests/: CMakeLists.txt  test_quat.cpp  test_quat_fixed.cpp
